--- a/templates/etc/influxdb/config.yml.j2
+++ b/templates/etc/influxdb/config.yml.j2
@@ -1,3 +1,5 @@
-{{ ansible_managed | comment }}
+#jinja2: trim_blocks: True, lstrip_blocks: True
+---
+# {{ ansible_managed }}
 
 {{ influxdb_config | to_nice_yaml }}
